--- a/app/assets/stylesheets/block_defaults.scss
+++ b/app/assets/stylesheets/block_defaults.scss
@@ -17,3 +17,15 @@
   justify-content: center;
   width: 60%;
 }
+
+@include media-breakpoint-up(xl) {
+  .rsvp-block {
+    display: none;
+  }
+}
+
+@include media-breakpoint-between(sm, xl) {
+  .rsvp-block {
+    margin-bottom: 20px;
+  }
+}
